--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}">
+    <title>Moja aplikacja</title>
 </head>
 <body>
+<h4>Witamy w przychodni</h4>
 
 </body>
 </html>
