--- a/src/main/resources/templates/patient.html
+++ b/src/main/resources/templates/patient.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link href = "/css/styles.css" rel = "stylesheet"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}">
     <title>Moja aplikacja</title>
 </head>
 <body>
