--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}">
-    <title>Moja aplikacja</title>
+    <title>Przychodnia</title>
 </head>
 <body>
-<h4>Witamy w przychodni</h4>
-
+<h1>Witamy w przychodni</h1>
+<ol>
+    <li><a th:href="@{/drugs}">Leki</a></li>
+    <li><a th:href="@{/examinations}">Badania</a></li>
+    <li><a th:href="@{/patients}">Pacjenci</a></li>
+    <li><a th:href="@{/prescriptions}">Recepty</a></li>
+    <li><a th:href="@{/referrals}">Skierowania</a></li>
+</ol>
 </body>
 </html>
