--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -3,15 +3,36 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:fragment="head">
   <meta charset="UTF-8">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}">
   <title>Przychodnia</title>
 </head>
 <body>
-<nav th:fragment="nav">
-  <h2><a th:href="@{/}">Przychodnia</a></h2>
-  <p sec:authorize="!isAuthenticated()"><a th:href="@{/login}">Zaloguj się</a></p>
-  <p sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Wyloguj się</a></p>
-</nav>
 
+<nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+  <div class="container-fluid">
+    <a class="navbar-brand" th:href="@{/}">Przychodnia</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" th:href="@{/}">Home</a>
+        </li>
+      </ul>
+    </div>
+    <div>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a sec:authorize="!isAuthenticated()" class="nav-link" th:href="@{/login}">Zaloguj się</a>
+        </li>
+        <li class="nav-item">
+          <a sec:authorize="isAuthenticated()" class="nav-link" href="#" th:href="@{/logout}">Wyloguj się</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 </body>
 </html>
