--- a/src/main/resources/templates/listPage.html
+++ b/src/main/resources/templates/listPage.html
@@ -4,14 +4,17 @@
 </head>
 <body>
 <nav th:replace="layout.html::nav"></nav>
-<table>
-    <tr>
-        <th th:each="field:${fields}" th:text="${field}"></th>
-    </tr>
-    <tr th:each="item : ${list}">
-        <td th:each="val : ${item}" th:text="${val}"></td>
-    </tr>
-</table>
+
+<div class="card border-secondary mb-3 text-center" style="max-width: 70rem; margin: 0 auto; margin-top: 20px">
+    <table>
+        <tr>
+            <th th:each="field:${fields}" th:text="${field}"></th>
+        </tr>
+        <tr th:each="item : ${list}">
+            <td th:each="val : ${item}" th:text="${val}"></td>
+        </tr>
+    </table>
+</div>
 
 </body>
 </html>
