--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -23,6 +23,9 @@
         <li sec:authorize="hasRole('ADMIN')" class="nav-item">
           <a class="nav-link active" aria-current="page" th:href="@{/swagger-ui/}">API</a>
         </li>
+        <li sec:authorize="hasRole('ADMIN')" class="nav-item">
+          <a class="nav-link active" aria-current="page" th:href="@{/drugs/addDrug/}">Add Drug</a>
+        </li>
       </ul>
     </div>
     <div>
