--- a/src/main/resources/templates/newItem.html
+++ b/src/main/resources/templates/newItem.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<html lang="pl" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<head th:replace="layout.html::head">
     <title>New Drug</title>
 </head>
 <body>
-<h2>Newly created drug:</h2>
-<table>
-    <tr>
-        <th th:text="'Name: ' + ${name}"></th>
-    </tr>
-    <tr>
-        <th th:text="'Manufacturer: ' + ${manufacturer}"></th>
-    </tr>
-    <tr>
-        <th th:text="'Price: ' + ${price}"></th>
-    </tr>
-    <tr>
-    <th th:text="'Prescription Needed: ' + ${prescriptionNeeded}"></th>
-    </tr>
-</table>
-<a href="/drugs">Drugs</a>
+<nav th:replace="layout.html::nav"></nav>
+
+    <div class="card border-secondary mb-3" style="max-width: 25rem; margin: 0 auto; margin-top: 20px">
+        <div class="card-header text-center">Newly created drug:</div>
+        <div class="card-body text-secondary">
+            <table>
+                <tr>
+                    <th th:text="'Name: ' + ${name}"></th>
+                </tr>
+                <tr>
+                    <th th:text="'Manufacturer: ' + ${manufacturer}"></th>
+                </tr>
+                <tr>
+                    <th th:text="'Price: ' + ${price}"></th>
+                </tr>
+                <tr>
+                    <th th:text="'Prescription Needed: ' + ${prescriptionNeeded}"></th>
+                </tr>
+            </table>
+            <div class="d-grid gap-2" style="margin-top: 5px;">
+                <a class = "btn btn-secondary" href="/drugs">Back to drugs list</a>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
